Make sure sane first load time UMA is exported.

In the following scenario, time between (1) to (4) was exported.
We should export the time for (4).

(1) ShowKeyboard is called
(2) Before animation finishes, HideKeyboard is called
(3) time passes.
(4) ShowKeyboard is called and keyboard is actually shown.

Bug: 742721
Change-Id: I1fc3a92cea7bfce25e8efb407a3e41508a367c36